# EIF201-Progra-I

./: .gitignore  CMakeLists.txt  README.md  listas-simples.md
docs/: estructura-datos.md  excepciones.md  functions.md  intro-clases.md  intro-progra.md  listas-simples.md  material-referencia.md  objetos-clases-tutorial.md  objetos-clases.md  punteros.md  relaciones-objeto.md  tutorial-num-racionales.md  uml.md  video-tutoriales.md
docs/01_intro/: intro.md
docs/02_objects/: README.md
docs/intro/: example_01.cpp  intro.md
examples/04-rela-agregacion/: CMakeLists.txt  Departamento.cpp  Departamento.h  Profesor.cpp  Profesor.h  README.md  main.cpp
examples/04-rela-asociacion-simple/: CMakeLists.txt  Doctor.cpp  Doctor.h  Paciente.cpp  Paciente.h  README.md  main.cpp
examples/04-rela-composicion/: Animacion.cpp  Animacion.h  CMakeLists.txt  Punto2D.cpp  Punto2D.h  README.md  main.cpp
exercises/CalculoPrestamo/: CMakeLists.txt  CalculoPrestamo.cpp  CalculoPrestamo.h  README.md  main.cpp
exercises/EjercicioListaProfesores/: CMakeLists.txt  ListaProfesores.cpp  ListaProfesores.h  Nodo.cpp  Nodo.h  Profesor.cpp  Profesor.h  README.md  main.cpp
exercises/EjercicioPOOBasico/: CMakeLists.txt  ClaseEscuela.cpp  ClaseEscuela.h  Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  Profesor.cpp  Profesor.h  main.cpp
exercises/EjerciciosDinamicos/: CMakeLists.txt  Curso.cpp  Curso.h  Estudiante.cpp  Estudiante.h  main.cpp
exercises/EjerciciosDinamicosArreglos/: CMakeLists.txt  Curso.cpp  Curso.h  main.cpp
exercises/EjerciciosPunterosVectores/: CMakeLists.txt  (+5 more)
(+32 files in other folders)
